--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link href="gwdimage_style.css" rel="stylesheet" data-version="11" data-exports-type="gwd-image">
   <style type="text/css" id="gwd-lightbox-style">.gwd-lightbox {
     overflow: hidden;
-    border: 1px dashed rgb(160, 160, 160);
+    border: none;
 }</style>
   <style type="text/css" id="gwd-text-style">p {
     margin: 0px;
@@ -162,19 +162,21 @@ body {
     -webkit-transform-style: preserve-3d;
     -moz-transform-style: preserve-3d;
 }
-.gwd-div-13kg {
-    position: absolute;
-    left: 0px;
-    top: 0px;
-    width: 600px;
-    height: 800px;
-}
 .gwd-div-1tkh {
     position: absolute;
-    top: 0%;
-    left: 0%;
     width: 100%;
     height: 100%;
+    left: 0%;
+    top: 0%;
+    background-image: none;
+    background-color: transparent;
+    border-style: solid;
+    border-width: 1px;
+    border-image-source: none;
+    border-image-width: initial;
+    border-image-outset: initial;
+    border-image-repeat: initial;
+    border-color: transparent;
 }
 .gwd-img-fv21 {
     display: block;
@@ -303,27 +305,25 @@ body {
     <div is="gwd-pagedeck" class="gwd-page-container" id="pagedeck">
       <div is="gwd-page" id="page1" class="gwd-page-wrapper gwd-page-size gwd-lightbox" data-gwd-width="100%" data-gwd-height="100%">
         <div class="gwd-page-content gwd-page-size">
-          <img class="gwd-img-1hx3" id="acc_BRLarge" is="gwd-image" source="acc_BRLarge.svg?1521680214943">
-          <img class="gwd-img-1hcu" id="acc_BLMedium" is="gwd-image" source="acc_BLMedium.svg?1521680214943">
-          <img class="gwd-img-1d72" id="t_ATLANTA" is="gwd-image" source="t_ATLANTA.svg?1521680214943">
-          <img class="gwd-img-1gag" id="v_ATLSkyline_1" is="gwd-image" source="v_AtlantaSkyline.svg?1521680214943">
-          <img class="gwd-img-11rv" id="acc_TLLarge" is="gwd-image" source="acc_TLLarge.svg?1521680214943">
-          <img class="gwd-img-r8pp" id="acc_TRMedium" is="gwd-image" source="acc_TRMedium.svg?1521680214943">
-          <img class="gwd-img-16qq" id="acc_TLSmall" is="gwd-image" source="acc_TLSmall.svg?1521680214943">
-          <img class="gwd-img-10ty" id="v_CXA" is="gwd-image" source="v_CXA.svg?1521680214943">
-          <div class="gwd-div-13kg">
-          </div>
+          <img class="gwd-img-1hx3" id="acc_BRLarge" is="gwd-image" source="acc_BRLarge.svg?1521681192656">
+          <img class="gwd-img-1hcu" id="acc_BLMedium" is="gwd-image" source="acc_BLMedium.svg?1521681192656">
+          <img class="gwd-img-1d72" id="t_ATLANTA" is="gwd-image" source="t_ATLANTA.svg?1521681192656">
+          <img class="gwd-img-1gag" id="v_ATLSkyline_1" is="gwd-image" source="v_AtlantaSkyline.svg?1521681192656">
+          <img class="gwd-img-11rv" id="acc_TLLarge" is="gwd-image" source="acc_TLLarge.svg?1521681192656">
+          <img class="gwd-img-r8pp" id="acc_TRMedium" is="gwd-image" source="acc_TRMedium.svg?1521681192656">
+          <img class="gwd-img-16qq" id="acc_TLSmall" is="gwd-image" source="acc_TLSmall.svg?1521681192656">
+          <img class="gwd-img-10ty" id="v_CXA" is="gwd-image" source="v_CXA.svg?1521681192656">
           <div class="gwd-div-1tkh" id="ContentStack">
             <div class="gwd-div-1dfv" id="Spacer"></div>
             <div class="gwd-div-vkrx" id="Contact">
-              <img is="gwd-image" source="v_Email.svg?1521680214943" id="gwd-image_1" class="gwd-img-3n7p">
-              <img is="gwd-image" source="v_Call.svg?1521680214943" id="gwd-image_2" class="gwd-img-4j00">
+              <img is="gwd-image" source="v_Email.svg?1521681192656" id="gwd-image_1" class="gwd-img-3n7p">
+              <img is="gwd-image" source="v_Call.svg?1521681192656" id="gwd-image_2" class="gwd-img-4j00">
             </div>
             <div class="gwd-div-51q3" id="MiddleContent">
-              <p class="gwd-p-140j">Part art, part science, pure human &amp;trade.</p>
+              <p class="gwd-p-140j">Part art, part science, pure human™.</p>
               <h1 class="gwd-p-zx21">DIGITAL STRATEGY &amp; USER EXPERIENCE</h1>
             </div>
-            <img class="gwd-img-fv21" id="DLogoV" is="gwd-image" source="DLogoV.svg?1521680214943" alt="designers INTERNATIONAL">
+            <img class="gwd-img-fv21" id="DLogoV" is="gwd-image" source="DLogoV.svg?1521681192656" alt="designers INTERNATIONAL">
           </div>
         </div>
       </div>
