--- a/index.html
+++ b/index.html
@@ -184,27 +184,27 @@ body {
     left: 50%;
     padding-top: 40px;
     position: absolute;
-    top: 0%;
     width: 250px;
-    transform-style: preserve-3d;
-    -webkit-transform-style: preserve-3d;
-    -moz-transform-style: preserve-3d;
+    top: 0%;
     transform: translate3d(-125px, -1px, 0px);
     -webkit-transform: translate3d(-125px, -1px, 0px);
     -moz-transform: translate3d(-125px, -1px, 0px);
+    transform-style: preserve-3d;
+    -webkit-transform-style: preserve-3d;
+    -moz-transform-style: preserve-3d;
 }
 .gwd-div-vkrx {
     height: 50px;
     left: 50%;
     position: absolute;
     width: 50px;
+    top: 66.6667%;
+    transform: translate3d(-25px, -40px, 0px);
+    -webkit-transform: translate3d(-25px, -40px, 0px);
+    -moz-transform: translate3d(-25px, -40px, 0px);
     transform-style: preserve-3d;
     -webkit-transform-style: preserve-3d;
     -moz-transform-style: preserve-3d;
-    top: 66.6667%;
-    transform: translate3d(-25px, -38px, 0px);
-    -webkit-transform: translate3d(-25px, -38px, 0px);
-    -moz-transform: translate3d(-25px, -38px, 0px);
 }
 .gwd-img-3n7p {
     display: block;
@@ -225,31 +225,31 @@ body {
 .gwd-div-1dfv {
     position: absolute;
     left: 50%;
-    transform-style: preserve-3d;
-    -webkit-transform-style: preserve-3d;
-    -moz-transform-style: preserve-3d;
-    top: 100%;
     width: 99px;
     height: 136px;
     transform-origin: 49.5593px 68px 0px;
     -webkit-transform-origin: 49.5593px 68px 0px;
     -moz-transform-origin: 49.5593px 68px 0px;
+    top: 100%;
     transform: translate3d(-49px, -137px, 0px);
     -webkit-transform: translate3d(-49px, -137px, 0px);
     -moz-transform: translate3d(-49px, -137px, 0px);
+    transform-style: preserve-3d;
+    -webkit-transform-style: preserve-3d;
+    -moz-transform-style: preserve-3d;
 }
 .gwd-div-51q3 {
     position: absolute;
     width: 445px;
+    left: 50%;
+    height: 50px;
+    top: 33.3333%;
+    transform: translate3d(-222px, 57px, 0px);
+    -webkit-transform: translate3d(-222px, 57px, 0px);
+    -moz-transform: translate3d(-222px, 57px, 0px);
     transform-style: preserve-3d;
     -webkit-transform-style: preserve-3d;
     -moz-transform-style: preserve-3d;
-    left: 50%;
-    top: 33.3333%;
-    height: 56px;
-    transform: translate3d(-222px, 55px, 0px);
-    -webkit-transform: translate3d(-222px, 55px, 0px);
-    -moz-transform: translate3d(-222px, 55px, 0px);
 }
 .gwd-p-140j {
     font-family: Lato;
@@ -292,41 +292,48 @@ body {
 }
 @media (max-height: 554px) {
     .gwd-img-fv21 {
-        padding-top: 0px;
         top: 0%;
-        transform: translate3d(-125px, -1px, 0px);
-        -webkit-transform: translate3d(-125px, -1px, 0px);
-        -moz-transform: translate3d(-125px, -1px, 0px);
         transform-style: preserve-3d;
         -webkit-transform-style: preserve-3d;
         -moz-transform-style: preserve-3d;
+        padding: 10px;
+        left: 50%;
+        width: 211px;
+        height: 138.73px;
+        transform: translate3d(-116px, -1px, 0px);
+        -webkit-transform: translate3d(-116px, -1px, 0px);
+        -moz-transform: translate3d(-116px, -1px, 0px);
     }
     .gwd-div-51q3 {
         top: 33.3333%;
-        transform: translate3d(-222px, 28px, 0px);
-        -webkit-transform: translate3d(-222px, 28px, 0px);
-        -moz-transform: translate3d(-222px, 28px, 0px);
         transform-style: preserve-3d;
         -webkit-transform-style: preserve-3d;
         -moz-transform-style: preserve-3d;
+        left: 50%;
+        transform: translate3d(-223px, 35px, 0px);
+        -webkit-transform: translate3d(-223px, 35px, 0px);
+        -moz-transform: translate3d(-223px, 35px, 0px);
     }
     .gwd-div-vkrx {
         top: 66.6667%;
-        transform: translate3d(-25px, -52px, 0px);
-        -webkit-transform: translate3d(-25px, -52px, 0px);
-        -moz-transform: translate3d(-25px, -52px, 0px);
         transform-style: preserve-3d;
         -webkit-transform-style: preserve-3d;
         -moz-transform-style: preserve-3d;
+        left: 50%;
+        transform: translate3d(-26px, -37px, 0px);
+        -webkit-transform: translate3d(-26px, -37px, 0px);
+        -moz-transform: translate3d(-26px, -37px, 0px);
     }
     .gwd-div-1dfv {
         top: 100%;
-        transform: translate3d(-49px, -137px, 0px);
-        -webkit-transform: translate3d(-49px, -137px, 0px);
-        -moz-transform: translate3d(-49px, -137px, 0px);
         transform-style: preserve-3d;
         -webkit-transform-style: preserve-3d;
         -moz-transform-style: preserve-3d;
+        left: 50%;
+        height: 109px;
+        transform: translate3d(-50px, -110px, 0px);
+        -webkit-transform: translate3d(-50px, -110px, 0px);
+        -moz-transform: translate3d(-50px, -110px, 0px);
     }
 }
 @media (min-height: 555px) {}</style>
@@ -344,25 +351,25 @@ body {
     <div is="gwd-pagedeck" class="gwd-page-container" id="pagedeck">
       <div is="gwd-page" id="page1" class="gwd-page-wrapper gwd-page-size gwd-lightbox" data-gwd-width="100%" data-gwd-height="100%">
         <div class="gwd-page-content gwd-page-size">
-          <img class="gwd-img-1hx3" id="acc_BRLarge" is="gwd-image" source="acc_BRLarge.svg?1521681589435">
-          <img class="gwd-img-1hcu" id="acc_BLMedium" is="gwd-image" source="acc_BLMedium.svg?1521681589435">
-          <img class="gwd-img-1d72" id="t_ATLANTA" is="gwd-image" source="t_ATLANTA.svg?1521681589435">
-          <img class="gwd-img-1gag" id="v_ATLSkyline_1" is="gwd-image" source="v_AtlantaSkyline.svg?1521681589435">
-          <img class="gwd-img-11rv" id="acc_TLLarge" is="gwd-image" source="acc_TLLarge.svg?1521681589435">
-          <img class="gwd-img-r8pp" id="acc_TRMedium" is="gwd-image" source="acc_TRMedium.svg?1521681589435">
-          <img class="gwd-img-16qq" id="acc_TLSmall" is="gwd-image" source="acc_TLSmall.svg?1521681589435">
-          <img class="gwd-img-10ty" id="v_CXA" is="gwd-image" source="v_CXA.svg?1521681589435">
+          <img class="gwd-img-1hx3" id="acc_BRLarge" is="gwd-image" source="acc_BRLarge.svg?1521681888670">
+          <img class="gwd-img-1hcu" id="acc_BLMedium" is="gwd-image" source="acc_BLMedium.svg?1521681888670">
+          <img class="gwd-img-1d72" id="t_ATLANTA" is="gwd-image" source="t_ATLANTA.svg?1521681888670">
+          <img class="gwd-img-1gag" id="v_ATLSkyline_1" is="gwd-image" source="v_AtlantaSkyline.svg?1521681888670">
+          <img class="gwd-img-11rv" id="acc_TLLarge" is="gwd-image" source="acc_TLLarge.svg?1521681888670">
+          <img class="gwd-img-r8pp" id="acc_TRMedium" is="gwd-image" source="acc_TRMedium.svg?1521681888670">
+          <img class="gwd-img-16qq" id="acc_TLSmall" is="gwd-image" source="acc_TLSmall.svg?1521681888670">
+          <img class="gwd-img-10ty" id="v_CXA" is="gwd-image" source="v_CXA.svg?1521681888670">
           <div class="gwd-div-1tkh" id="ContentStack">
             <div class="gwd-div-1dfv" id="Spacer"></div>
             <div class="gwd-div-vkrx" id="Contact">
-              <img is="gwd-image" source="v_Email.svg?1521681589435" id="gwd-image_1" class="gwd-img-3n7p">
-              <img is="gwd-image" source="v_Call.svg?1521681589435" id="gwd-image_2" class="gwd-img-4j00">
+              <img is="gwd-image" source="v_Email.svg?1521681888670" id="gwd-image_1" class="gwd-img-3n7p">
+              <img is="gwd-image" source="v_Call.svg?1521681888670" id="gwd-image_2" class="gwd-img-4j00">
             </div>
             <div class="gwd-div-51q3" id="MiddleContent">
               <p class="gwd-p-140j">Part art, part science, pure human™.</p>
               <h1 class="gwd-p-zx21">DIGITAL STRATEGY &amp; USER EXPERIENCE</h1>
             </div>
-            <img class="gwd-img-fv21" id="DLogoV" is="gwd-image" source="DLogoV.svg?1521681589435" alt="designers INTERNATIONAL">
+            <img class="gwd-img-fv21" id="DLogoV" is="gwd-image" source="DLogoV.svg?1521681888670" alt="designers INTERNATIONAL">
           </div>
         </div>
       </div>
