--- a/index.html
+++ b/index.html
@@ -194,14 +194,14 @@ body {
     -moz-transform-style: preserve-3d;
 }
 .gwd-div-vkrx {
-    height: 50px;
-    left: 50%;
     position: absolute;
-    width: 50px;
     top: 66.6667%;
-    transform: translate3d(-25px, -40px, 0px);
-    -webkit-transform: translate3d(-25px, -40px, 0px);
-    -moz-transform: translate3d(-25px, -40px, 0px);
+    height: 50px;
+    width: 170px;
+    left: 50%;
+    transform: translate3d(-86px, -40px, 0px);
+    -webkit-transform: translate3d(-86px, -40px, 0px);
+    -moz-transform: translate3d(-86px, -40px, 0px);
     transform-style: preserve-3d;
     -webkit-transform-style: preserve-3d;
     -moz-transform-style: preserve-3d;
@@ -210,17 +210,29 @@ body {
     display: block;
     height: 50px;
     position: absolute;
-    top: 0px;
     width: 50px;
-    left: -53px;
+    left: 0%;
+    top: 50%;
+    transform: translate3d(0px, -25px, 0px);
+    -webkit-transform: translate3d(0px, -25px, 0px);
+    -moz-transform: translate3d(0px, -25px, 0px);
+    transform-style: preserve-3d;
+    -webkit-transform-style: preserve-3d;
+    -moz-transform-style: preserve-3d;
 }
 .gwd-img-4j00 {
     display: block;
     height: 50px;
     position: absolute;
-    top: 0px;
     width: 50px;
-    left: 53px;
+    left: 100%;
+    transform-style: preserve-3d;
+    -webkit-transform-style: preserve-3d;
+    -moz-transform-style: preserve-3d;
+    top: 50%;
+    transform: translate3d(-50px, -25px, 0px);
+    -webkit-transform: translate3d(-50px, -25px, 0px);
+    -moz-transform: translate3d(-50px, -25px, 0px);
 }
 .gwd-div-1dfv {
     position: absolute;
@@ -310,9 +322,9 @@ body {
         -webkit-transform-style: preserve-3d;
         -moz-transform-style: preserve-3d;
         left: 50%;
-        transform: translate3d(-223px, 35px, 0px);
-        -webkit-transform: translate3d(-223px, 35px, 0px);
-        -moz-transform: translate3d(-223px, 35px, 0px);
+        transform: translate3d(-223px, 42px, 0px);
+        -webkit-transform: translate3d(-223px, 42px, 0px);
+        -moz-transform: translate3d(-223px, 42px, 0px);
     }
     .gwd-div-vkrx {
         top: 66.6667%;
@@ -320,9 +332,9 @@ body {
         -webkit-transform-style: preserve-3d;
         -moz-transform-style: preserve-3d;
         left: 50%;
-        transform: translate3d(-26px, -37px, 0px);
-        -webkit-transform: translate3d(-26px, -37px, 0px);
-        -moz-transform: translate3d(-26px, -37px, 0px);
+        transform: translate3d(-86px, -23px, 0px);
+        -webkit-transform: translate3d(-86px, -23px, 0px);
+        -moz-transform: translate3d(-86px, -23px, 0px);
     }
     .gwd-div-1dfv {
         top: 100%;
@@ -330,10 +342,43 @@ body {
         -webkit-transform-style: preserve-3d;
         -moz-transform-style: preserve-3d;
         left: 50%;
-        height: 109px;
-        transform: translate3d(-50px, -110px, 0px);
-        -webkit-transform: translate3d(-50px, -110px, 0px);
-        -moz-transform: translate3d(-50px, -110px, 0px);
+        height: 88px;
+        width: 79.93px;
+        transform: translate3d(-41px, -89px, 0px);
+        -webkit-transform: translate3d(-41px, -89px, 0px);
+        -moz-transform: translate3d(-41px, -89px, 0px);
+    }
+    .gwd-img-1gag {
+        transform-style: preserve-3d;
+        -webkit-transform-style: preserve-3d;
+        -moz-transform-style: preserve-3d;
+        transform: translate3d(-741px, -94px, 0px);
+        -webkit-transform: translate3d(-741px, -94px, 0px);
+        -moz-transform: translate3d(-741px, -94px, 0px);
+    }
+    .gwd-img-1d72 {
+        transform-style: preserve-3d;
+        -webkit-transform-style: preserve-3d;
+        -moz-transform-style: preserve-3d;
+        transform: translate3d(-187px, -82px, 0px);
+        -webkit-transform: translate3d(-187px, -82px, 0px);
+        -moz-transform: translate3d(-187px, -82px, 0px);
+    }
+    .gwd-img-1hcu {
+        transform-style: preserve-3d;
+        -webkit-transform-style: preserve-3d;
+        -moz-transform-style: preserve-3d;
+        transform: translate3d(0px, -37px, 0px);
+        -webkit-transform: translate3d(0px, -37px, 0px);
+        -moz-transform: translate3d(0px, -37px, 0px);
+    }
+    .gwd-img-1hx3 {
+        transform-style: preserve-3d;
+        -webkit-transform-style: preserve-3d;
+        -moz-transform-style: preserve-3d;
+        transform: translate3d(-410px, -97px, 0px);
+        -webkit-transform: translate3d(-410px, -97px, 0px);
+        -moz-transform: translate3d(-410px, -97px, 0px);
     }
 }
 @media (min-height: 540px) {}</style>
@@ -351,25 +396,29 @@ body {
     <div is="gwd-pagedeck" class="gwd-page-container" id="pagedeck">
       <div is="gwd-page" id="page1" class="gwd-page-wrapper gwd-page-size gwd-lightbox" data-gwd-width="100%" data-gwd-height="100%">
         <div class="gwd-page-content gwd-page-size">
-          <img class="gwd-img-1hx3" id="acc_BRLarge" is="gwd-image" source="acc_BRLarge.svg?1521682820845">
-          <img class="gwd-img-1hcu" id="acc_BLMedium" is="gwd-image" source="acc_BLMedium.svg?1521682820845">
-          <img class="gwd-img-1d72" id="t_ATLANTA" is="gwd-image" source="t_ATLANTA.svg?1521682820845">
-          <img class="gwd-img-1gag" id="v_ATLSkyline_1" is="gwd-image" source="v_AtlantaSkyline.svg?1521682820845">
-          <img class="gwd-img-11rv" id="acc_TLLarge" is="gwd-image" source="acc_TLLarge.svg?1521682820845">
-          <img class="gwd-img-r8pp" id="acc_TRMedium" is="gwd-image" source="acc_TRMedium.svg?1521682820845">
-          <img class="gwd-img-16qq" id="acc_TLSmall" is="gwd-image" source="acc_TLSmall.svg?1521682820845">
-          <img class="gwd-img-10ty" id="v_CXA" is="gwd-image" source="v_CXA.svg?1521682820845">
+          <img class="gwd-img-1hx3" id="acc_BRLarge" is="gwd-image" source="acc_BRLarge.svg?1521684315087">
+          <img class="gwd-img-1hcu" id="acc_BLMedium" is="gwd-image" source="acc_BLMedium.svg?1521684315087">
+          <img class="gwd-img-1d72" id="t_ATLANTA" is="gwd-image" source="t_ATLANTA.svg?1521684315087">
+          <img class="gwd-img-1gag" id="v_ATLSkyline_1" is="gwd-image" source="v_AtlantaSkyline.svg?1521684315087">
+          <img class="gwd-img-11rv" id="acc_TLLarge" is="gwd-image" source="acc_TLLarge.svg?1521684315087">
+          <img class="gwd-img-r8pp" id="acc_TRMedium" is="gwd-image" source="acc_TRMedium.svg?1521684315087">
+          <img class="gwd-img-16qq" id="acc_TLSmall" is="gwd-image" source="acc_TLSmall.svg?1521684315087">
+          <img class="gwd-img-10ty" id="v_CXA" is="gwd-image" source="v_CXA.svg?1521684315087">
           <div class="gwd-div-1tkh" id="ContentStack">
             <div class="gwd-div-1dfv" id="Spacer"></div>
             <div class="gwd-div-vkrx" id="Contact">
-              <img is="gwd-image" source="v_Email.svg?1521682820845" id="gwd-image_1" class="gwd-img-3n7p">
-              <img is="gwd-image" source="v_Call.svg?1521682820845" id="gwd-image_2" class="gwd-img-4j00">
+              <a href="mailto:info@designer-int.com?Subject=Info Request">
+                <img is="gwd-image" source="v_Email.svg?1521684315087" alt="info@designers-int.com" id="gwd-image_1" class="gwd-img-3n7p">
+              </a>
+              <a href="tel:1-678-935-9663">
+              <img is="gwd-image" source="v_Call.svg?1521684315087" alt="(678) 935-9663" id="gwd-image_2" class="gwd-img-4j00">
+              </a>
             </div>
             <div class="gwd-div-51q3" id="MiddleContent">
               <p class="gwd-p-140j">Part art, part science, pure human™.</p>
               <h1 class="gwd-p-zx21">DIGITAL STRATEGY &amp; USER EXPERIENCE</h1>
             </div>
-            <img class="gwd-img-fv21" id="DLogoV" is="gwd-image" source="DLogoV.svg?1521682820845" alt="designers INTERNATIONAL">
+            <img class="gwd-img-fv21" id="DLogoV" is="gwd-image" source="DLogoV.svg?1521684315087" alt="designers INTERNATIONAL">
           </div>
         </div>
       </div>
